# aws-monthly-costs

./: .pre-commit-config.yaml  AGENT_HANDOFF.md  API_REFERENCE.md  CHANGELOG.md  DOCUMENTATION_REVIEW_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  RELEASE_QUICKSTART.md  RELEASE_WORKFLOW.md  REPOSITORY_REVIEW.md  SECURITY_REVIEW.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  TEST_IMPLEMENTATION_SUMMARY.md  account-groups.yaml  aws-monthly-costs-accounts-alt.py  aws-monthly-costs-accounts.py  aws-monthly-costs-daily.py  aws-monthly-costs-new.py  aws-monthly-costs-sandbox.py  aws-monthly-costs-service-daily.py  aws-monthly-costs-service.py  aws-monthly-costs.py  aws-monthy-costs-config-sandbox.yaml  aws-monthy-costs-config.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: WORKFLOW_AUTOMATION.md  WORKFLOW_MIGRATION.md  dependabot.yml
.github/agents/: README.md  bug-hunter.agent.md  code-reviewer.agent.md  documentation-writer.agent.md  performance-optimizer.agent.md  refactoring-expert.agent.md  security-analyzer.agent.md  super-agent.agent.md  test-generator.agent.md
tests/: README.md  __init__.py  conftest.py  test_account.py  test_bu.py  test_calculations.py  test_charts.py  test_config_mixin.py  test_constants.py  test_e2e.py  test_formatting.py  test_integration.py  test_integration_comprehensive.py  test_main.py  test_main_additional.py  test_main_coverage.py  test_reportexport.py  test_reportexport_comprehensive.py  test_service.py  test_service_additional.py  test_version.py  test_year_mode.py
tmp/: example.xlsx
(+29 files in other folders)
