[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "amc.version.__version__"}

[project]
name = "aws-monthly-costs"
description = "Retrieves AWS Monthly Costs"
requires-python = ">=3.12"
authors = [
  {email = "rbowman@authoritybrandsllc.com"},
  {name = "Ryan Bowman"},
]
dynamic = ["version"]

[project.scripts]
amc = "amc.__main__:main"