[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "amc.version.__version__"}

[project]
name = "aws-monthly-costs"
description = "Retrieves AWS Monthly Costs"
requires-python = ">=3.12"
authors = [
  {email = "rbowman@authoritybrandsllc.com"},
  {name = "Ryan Bowman"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
    "boto3",
    "pyyaml"
]

[project.scripts]
amc = "amc.__main__:main"

